Fix box shadow not showing

--- a/assets/stylesheets/navbar.scss
+++ b/assets/stylesheets/navbar.scss
@@ -2,6 +2,17 @@
 ---
 
 .navbar {
+	& {
+		background: #fff ;
+		box-shadow: 0 2px 8px #0002 ;
+	}
+
+	&::after {
+		content: '' ;
+		display: block ;
+		clear: both ;
+	}
+
 	.img36 {
 		width: 36px ;
 	}
@@ -12,17 +23,6 @@
 		width: 92% ;
 		margin: 0 auto ;
 		max-width: 900px;
-	}
-
-	header {
-		background: #fff ;
-		box-shadow: 0 2px 8px #0002 ;
-	}
-
-	header::after {
-		content: '' ;
-		display: block ;
-		clear: both ;
 	}
 
 	.logo {
